# llm-grief

./: .gitignore  Makefile  README.md  personas.yaml  pyproject.toml
config/: config.yaml  config_minimal.yaml  config_multi_personas.yaml  config_qwen32b_8bit.yaml  personas.yaml
results/: tsne_embeddings.csv
src/: activation_collector.py  analyze_sae.py  data_generation.py  generate_100_personas.py  sae_model.py  train_sae.py  view_diaries.py
src/generation/: __init__.py  postprocess.py  storage.py
