[project]
name = "llm-grief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.45.0",
    "black>=25.9.0",
    "gpustat>=1.1.1",
    "matplotlib>=3.7.0",
    "mypy>=1.18.2",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "pynvim>=0.6.0",
    "pyright>=1.1.406",
    "pyyaml>=6.0.1",
    "ruff>=0.13.3",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
